--- a/src/app/components/Popup/Popup.module.css
+++ b/src/app/components/Popup/Popup.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 10003;
 }
 
 .termsContainer {
